# spica

./: .bazelignore  .bazelrc  .dockerignore  .gitignore  .nxignore  .prettierignore  .prettierrc  BUILD.bazel  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Crafting Your Workspace.md  Dockerfile  Managing Dependencies.md  README.md  UI_KIT_LOCAL_DEV.md  WORKSPACE  bucket.ts  buildkit.md  deployment.panel.yaml  deployment.yaml  docker-cache.md  eslint.config.js  github-actions-cache.md  jest.config.ts  jest.flaky.setup.js  jest.preset.js  jest.resolver.cjs  jest.setup.js  loader.mjs  nx.json  openapi.json  package-lock.json  package.json  project.json  readme.md  register.mjs  test.js  (+6 more)
docs/content/: BUILD.bazel
docs/content/api/: BUILD.bazel  index.md
docs/content/concept/: BUILD.bazel  bucket.md  cli.md  composer.md  dashboard.md  function.md  getting-started.md  index.md  l10n.md  passport.md  spica-devkit.md  storage.md  subscription.md  user-activities.md  webhook.md
docs/content/guide/: BUILD.bazel  Scrum- Optimizing the Agility.txt  The performance optimizations should be investigated under two.txt  bucket.md  cli.md  contributing.md  dashboard.md  function.md  getting-started.md  index.md  introduction.md  new-docs.md  open-source-build.md  passport.md  storage.md  subscription.md  user-activities.md  webhook.md
docs/site/: BUILD.bazel  README.md  angular.json  calendly.js  deployment.yaml  ngsw-config.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json
docs/site/src/: index.html  main.ts  manifest.webmanifest  polyfills.ts  styles.css  styles.scss
stacks/: BUILD.bazel  README.md
stacks/api/: BUILD.bazel  app.module.ts  defaults.ts  main.ts  package.json  start-options.json
stacks/api/activity/: BUILD  BUILD.bazel  activity.controller.ts  activity.interceptor.ts  activity.logger.spec.ts  activity.logger.ts  activity.module.ts  activity.resources.ts  activity.service.ts  index.ts  interface.ts
stacks/api/asset/: BUILD.bazel
stacks/api/bucket/: BUILD  BUILD.bazel  activity.logger.ts  activity.resource.spec.ts  activity.resource.ts  bucket-data.acceptance.spec.ts  bucket-data.controller.spec.ts  bucket-data.controller.ts  bucket-data.service.spec.ts  bucket-data.service.ts  bucket.acceptance.spec.ts  bucket.controller.spec.ts  bucket.controller.ts  bucket.module.spec.ts  bucket.module.ts  bucket.schema.defaults.ts  bucket.schema.invalidator.ts  bucket.schema.resolver.spec.ts  bucket.schema.resolver.ts  bucket.schema.types.ts  bucket.service.spec.ts  bucket.service.ts  bucket.ts  cache.spec.ts  cache.ts  doc.md  index.ts  schedule.service.spec.ts  schedule.service.ts  scheduler.spec.ts  scheduler.ts  utilities.spec.ts  utilities.ts
stacks/api/composer/: BUILD  BUILD.bazel  composer.gateway.ts  composer.module.ts  html.ts  index.ts  interface.ts  palette.ts  project.ts  viewport.ts
stacks/api/dashboard/: BUILD  BUILD.bazel  dashboard.controller.spec.ts  dashboard.controller.ts  dashboard.module.ts  dashboard.service.spec.ts  dashboard.service.ts  dashboard.ts
stacks/api/function/: BUILD  BUILD.bazel  function.controller.ts  function.module.ts  function.service.ts  index.ts  interface.ts  language.gateway.ts  subscription.controller.ts  subscription.service.ts  trigger.schema.resolver.ts
stacks/api/machinery/: BUILD.bazel
stacks/api/passport/: BUILD  BUILD.bazel  activity.logger.ts  apikey.strategy.ts  auth.guard.ts  index.ts  interface.ts  jwt.strategy.ts  options.ts  passport.controller.ts  passport.module.ts  passport.service.ts  saml.service.ts  schema.resolver.ts
stacks/api/preference/: BUILD  BUILD.bazel  activity.resource.spec.ts  activity.resource.ts  index.ts  interface.ts  preference.acceptance.spec.ts  preference.controller.ts  preference.module.ts  preference.service.spec.ts  preference.service.ts
stacks/api/replication/: BUILD.bazel
stacks/api/stack/: BUILD.bazel
stacks/api/status/: BUILD.bazel
stacks/api/storage/: BUILD  BUILD.bazel  activity.resource.spec.ts  activity.resource.ts  options.ts  service.spec.ts  service.ts  service_account.json  storage.acceptance.spec.ts  storage.controller.spec.ts  storage.controller.ts  storage.module.ts  storage.service.spec.ts  storage.service.ts  strategy.spec.ts  strategy.ts
stacks/api/versioncontrol/: BUILD.bazel  BUILd.bazel
stacks/cli/: BUILD.bazel  index.ts  package.json  tsconfig.json
stacks/cli/src/: authentication.service.ts  authentication.ts  bootstrap.ts  compile.ts  config.ts  console.ts  context.ts  errors.ts  file.service.ts  formatter.ts  http.service.ts  http.ts  interface.ts  logger.ts  login.service.ts  machinery.ts  project.ts  range.ts  request.ts  service.ts  status.ts  utilities.ts  validator.ts  validators.spec.ts  validators.ts
stacks/cli/test/: BUILD.bazel  pull.spec.ts  push.spec.ts  validators.spec.ts
stacks/migrate/: BUILD.bazel  tsconfig.json
stacks/migrate/src/: main.ts  migrate.ts  session.ts
stacks/migrate/test/: BUILD.bazel  migrate.spec.ts  session.spec.ts
stacks/spica/: BUILD.bazel  Dockerfile  angular.json  browserslist  index.html  index.prod.html  karma.conf.js  main.dev.ts  main.prod.ts  package-lock.json  package.json  polyfills.ts  protractor.conf.js  styles.scss  test.ts  tsconfig.json  tsconfig.spec.json  tsconfig.worker.json
stacks/spica/container/: BUILD.bazel  nginx.conf  substitute.sh
stacks/spica/environments/: environment.prod.ts  environment.ts
stacks/spica/patches/: @angular-devkit+build-angular+0.1100.7.patch  fix-devkit-for-monaco.patch
stacks/spica/src/: BUILD.bazel  app.component.ts  app.module.ts  index.html  main.ts  polyfills.ts  styles.scss  test.ts
tools/dgeni/: BUILD.bazel  bazel-bin.ts  bundle.ts  dgeni.ts  docs-package.ts  index.bzl  readme.md  tsconfig.json
tools/dgeni/remark/: toc.ts  (+6 more)
tools/initcontainer/: BUILD.bazel  Dockerfile  defs.bzl  index.bzl
tools/mongoreplicationcontroller/: BUILD.bazel  Dockerfile  init.ts  main.ts  tsconfig.json
tools/pkg_stamp/: BUILD.bazel  bundler.js  index.bzl
tools/proto/: BUILD.bazel  change_import_style.ts  index.bzl
(+5200 files in other folders)
