package(default_visibility = ["//visibility:public"])

load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

exports_files(["tsconfig.json"])

filegroup(
    name = "spica",
    srcs = glob(["dist/spica/**/*"]),
)

filegroup(
    name = "site",
    srcs = glob(["dist/spica-site/**/*"]),
)

k8s_deploy(
    name = "deploy",
    images = {
        "spicaengine/api:master": "//stacks:api_image",
        "spicaengine/spica:master": "//stacks:spica_image",
        "spicaengine/initcontainer:master": "//tools/initcontainer",
    },
    template = ":deployment.yaml",
)
