package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "content",
    data = [
        "//docs/content/concept",
        "//docs/content/guide",
    ],
)

docs(
    name = "api",
    data = [
        "//stacks/api/bucket:docs",
        "//stacks/api/function:docs",
        "//stacks/api/passport:docs",
        "//stacks/api/storage:docs",
    ],
)
