package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")

container_image(
    name = "site",
    base = "@nginx_image//image",
    data_path = ".",
    docker_run_flags = "-p 80:80",
    files = [
        "//:site",
        "//stacks/spica/container:nginx.conf",
    ],
    labels = {
        "maintainer": "Spica maintainers <dev@spicaengine.com>",
    },
    legacy_run_behavior = False,
    stamp = True,
    symlinks = {
        "/etc/nginx/nginx.conf": "/stacks/spica/container/nginx.conf",
        "/usr/share/nginx/html": "/dist/spica-site",
    },
)

container_push(
    name = "push",
    format = "Docker",
    image = ":site",
    registry = "index.docker.io",
    repository = "spicaengine/site",
    tag = "{BUILD_SCM_VERSION}",
    tags = ["release-with-spica"],
)

k8s_deploy(
    name = "deploy",
    images = {
        "spicaengine/site": ":site",
    },
    template = ":deployment.yaml",
)
