package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
load("@k8s_deploy//:defaults.bzl", "k8s_deploy")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")
load("//tools/pkg_stamp:index.bzl", "pkg_stamp")

pkg_stamp(
    name = "site_stamp_pkg",
    srcs = [
        "//:site",
    ],
    substitutions = {
        "0.0.0-PLACEHOLDER": "{BUILD_SCM_VERSION}",
        "COMMIT_HASH_PLACEHOLDER": "{BUILD_SCM_HASH}",
    },
)

pkg_web(
    name = "site_pkg",
    srcs = [
        ":site_stamp_pkg",
    ],
)

container_image(
    name = "site",
    base = "@nginx_image//image",
    data_path = ".",
    docker_run_flags = "-p 80:80",
    files = [
        ":site_pkg",
        "//stacks/spica/container:nginx.conf",
    ],
    labels = {
        "maintainer": "Spica maintainers <dev@spicaengine.com>",
    },
    legacy_run_behavior = False,
    stamp = True,
    symlinks = {
        "/etc/nginx/nginx.conf": "/stacks/spica/container/nginx.conf",
        "/usr/share/nginx/html": "/site_pkg/site_stamp_pkg/dist/spica-site",
    },
)

container_push(
    name = "push",
    format = "Docker",
    image = ":site",
    registry = "index.docker.io",
    repository = "spicaengine/site",
    tag = "{BUILD_SCM_VERSION}",
    tags = ["release-with-spica"],
)

k8s_deploy(
    name = "deploy",
    images = {
        "spicaengine/site:master": ":site",
    },
    template = ":deployment.yaml",
)
