package(default_visibility = ["//visibility:public"])

load("@npm_bazel_typescript//:defs.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:defs.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")

ts_library(
    name = "api",
    srcs = [
        "app.module.ts",
        "defaults.ts",
        "main.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/database",
        "//stacks/api/bucket",
        "//stacks/api/composer",
        "//stacks/api/function",
        "//stacks/api/passport",
        "//stacks/api/preference",
        "//stacks/api/storage",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@types/node",
    ],
)

nodejs_binary(
    name = "bin",
    configuration_env_vars = [
        "DATABASE_URI",
        "DATABASE_NAME",
        "REPLICA_SET",
        "PUBLIC_HOST",
        "PERSISTENT_PATH",
        "PORT",
        "SECRET",
        "DEFAULT_PASSWORD",
    ],
    data = [":api"],
    entry_point = "//stacks/api:main.ts",
)

container_image(
    name = "api_image_base",
    base = "@node_image//image",
    env = {
        "DEFAULT_PASSWORD": "spica",
    },
    visibility = ["//visibility:private"],
)

nodejs_image(
    name = "image",
    base = ":api_image_base",
    data = ["//stacks/api"],
    entry_point = "//stacks/api:main.ts",
    node_modules = "@npm//:node_modules",
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "spicaengine/api",
    tag = "{BUILD_SCM_VERSION}",
    tags = ["release-with-spica"],
)
