load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("@io_bazel_rules_docker//docker/util:run.bzl", "container_run_and_commit")

ts_project(
    name = "api",
    srcs = [
        "main.ts",
    ],
    deps = [
        "//packages/core",
        "//packages/core/schema",
        "//packages/core/websocket",
        "//packages/database",
        "//stacks/api/activity",
        "//stacks/api/asset",
        "//stacks/api/bucket",
        "//stacks/api/dashboard",
        "//stacks/api/function",
        "//stacks/api/passport",
        "//stacks/api/preference",
        "//stacks/api/replication",
        "//stacks/api/status",
        "//stacks/api/storage",
        "//stacks/api/versioncontrol",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@nestjs/platform-express",
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//morgan",
        "@npm//yargs",
        "@npm//cookie-parser",
        "@npm//@nestjs/schedule"
    ],
)

nodejs_binary(
    name = "bin",
    configuration_env_vars = [
        "DATABASE_URI",
        "DATABASE_NAME",
        "REPLICA_SET",
        "PUBLIC_HOST",
        "PERSISTENT_PATH",
        "PORT",
        "FUNCTION_GRPC_ADDRESS",
        "SECRET",
        "DEFAULT_PASSWORD",
        "ENABLE_BUCKET_HOOKS",
        "ENABLE_BUCKET_HISTORY",
        "ENABLE_ACTIVITY_STREAM",
        "FUNCTION_POOL_SIZE",
    ],
    data = [":api"],
    entry_point = "//stacks/api:main.ts",
)

container_run_and_commit(
    name = "plugins",
    commands = ["apt -y update && apt install -y git && git config --global --add safe.directory '*'"],
    image = "@debian_image//image",
)

container_image(
    name = "base",
    base = ":plugins",
)

nodejs_image(
    name = "image_base",
    base = ":base",
    data = ["//stacks/api"],
    entry_point = "//stacks/api:main.ts",
    layers = [
        "@nodejs_linux_amd64//:bin/npm",
        "@nodejs_linux_amd64//:npm_files",
    ],
    visibility = ["//visibility:private"],
)

container_image(
    name = "image",
    base = ":image_base",
    env = {
        "DEFAULT_PASSWORD": "spica",
        "FUNCTION_GRPC_ADDRESS": "0.0.0.0:5688",
    },
    legacy_run_behavior = False,
    symlinks = {
        "/bin/npm": "/app/stacks/api/image_base.binary.runfiles/nodejs_linux_amd64/bin/npm",
    },
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "htuna07/aws-spica-api",
    tag = "0.9.29",
    tags = ["release-with-spica"],
)
