package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_npm")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = ["//:tsconfig.json"],
)

ts_library(
    name = "cli",
    srcs = glob([
        "src/**/*.ts",
        "index.ts"
    ]),
    data = ["bin/spica"],
    module_name = "@spica/cli",
    tsconfig = ":tsconfig",
    deps = [
        "@npm//@types/dockerode",
        "@npm//@types/node",
        "@npm//@types/json-schema",
        "@npm//colorette",
        "@npm//open",
        "@npm//ora",
        "@npm//columnify",
        "@npm//dockerode",
        "@npm//get-port",
        "@npm//axios",
        "@npm//cosmiconfig",
        "@npm//pretty-ms",
        "@npm//@caporal/core",
        "@npm//yaml",
        "@npm//jsonpath",
    ],
)

nodejs_binary(
    name = "bin",
    data = [":cli"],
    entry_point = "bin/spica",
    templated_args = ["--nobazel_patch_module_resolver"],
)

pkg_npm(
    name = "package",
    srcs = ["package.json"],
    tags = ["release-with-spica"],
    deps = [
        ":cli",
    ],
)
