package(default_visibility = ["//visibility:public"])

load("//tools/ts_project:index.bzl", "ts_project")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

ts_project(
    name = "migrate",
    package_name = "@spica/migrate",
    srcs = glob([
        "src/**/*.ts",
        "src/migrations/index.json",
    ]),
    deps = [
        "@npm//@types/mongodb",
        "@npm//@types/node",
        "@npm//@types/semver",
        "@npm//@types/yargs",
        "@npm//cli-color",
        "@npm//mongodb",
        "@npm//semver",
        "@npm//yargs",
    ],
)

nodejs_binary(
    name = "bin",
    data = [":migrate"],
    entry_point = "//stacks/migrate:src/main.ts",
)

nodejs_image(
    name = "image",
    base = "@debian_image//image",
    data = [":migrate"],
    entry_point = "//stacks/migrate:src/main.ts",
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "spicaengine/migrate",
    tag = "{BUILD_SCM_VERSION}",
    tags = ["release-with-spica"],
)
