package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("//tools/ts_project:index.bzl", "ts_project")

ts_project(
    name = "dgeni_sources",
    srcs = glob([
        "dgeni.ts",
        "helper/evaluator.ts",
        "processors/*.ts",
        "remark/*.ts",
    ]),
    deps = [
        "@npm//@types/node",
        "@npm//dgeni",
        "@npm//dgeni-packages",
        "@npm//mdast-util-toc",
        "@npm//path-to-regexp",
        "@npm//remark",
        "@npm//remark-frontmatter",
        "@npm//remark-highlight.js",
        "@npm//remark-html",
        "@npm//remark-slug",
        "@npm//typescript",
        "@npm//yaml",
    ],
)

nodejs_binary(
    name = "dgeni",
    data = [
        ":dgeni_sources",
    ],
    entry_point = ":dgeni.ts",
    templated_args = ["--bazel_patch_module_resolver"],
)
