package(default_visibility = ["//visibility:public"])

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_push")
load("//tools/ts_project:index.bzl", "ts_project")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")

ts_project(
    name = "mongoreplicationcontroller",
    srcs = ["main.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//@types/yargs",
        "@npm//yargs",
    ],
)

container_image(
    name = "base_image",
    base = "@mongoreplicationcontroller_base//image:dockerfile_image.tar",
    labels = {
        "maintainer": "Spica maintainers <dev@spicanengine.com>",
    },
    visibility = ["//visibility:private"],
)

nodejs_image(
    name = "image",
    base = ":base_image",
    data = [":mongoreplicationcontroller"],
    entry_point = "main.ts",
)

container_push(
    name = "push",
    format = "Docker",
    image = ":image",
    registry = "index.docker.io",
    repository = "spicaengine/mongoreplicationcontroller",
    tag = "{BUILD_SCM_VERSION}",
    tags = ["release-with-spica"],
)
