package(default_visibility = ["//visibility:public"])

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
    name = "bundler",
    data = [
        "bundler.js",
        "@build_bazel_rules_nodejs//third_party/github.com/gjtorikian/isBinaryFile",
    ],
    entry_point = ":bundler.js",
    install_source_map_support = False,
)
