package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "concept",
    srcs = [
        "index.md",
        "getting-started.md",
        "bucket.md",
        "function.md",
        "passport.md",
        "storage.md",
        "dashboard.md",
        "user-activities.md",
        "webhook.md",
        "l10n.md",
        "cli.md",
    ],
)
