package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "guide",
    srcs = [
        "index.md",
        "getting-started.md",
        "passport.md",
        "bucket.md",
        "storage.md",
        "function.md",
        "webhook.md",
        "user-activities.md",
        "dashboard.md",
        "cli.md"
    ],
)
