package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "guide",
    srcs = [
        "bucket.md",
        "cli.md",
        "dashboard.md",
        "function.md",
        "getting-started.md",
        "index.md",
        "passport.md",
        "storage.md",
        "user-activities.md",
        "webhook.md",
    ],
)
