package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

docs(
    name = "guide",
    # buildifier: leave-alone
    srcs = [
        "getting-started.md",
        "passport.md",
        "bucket.md",
        "function.md",
        "dashboard.md",
        "storage.md",
        "webhook.md",
        "user-activities.md",
        "index.md",
        "cli.md",
    ],
)
