load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "asset",
    package_name = "@spica-server/asset",
    srcs = glob([
        "schema/*.json",
        "**/*.ts",
        "index.ts"
    ]),
    deps = [
        "//stacks/api/passport/guard",
        "//packages/core/schema",
        "//packages/core",
        "//packages/interface/asset",
        "//packages/core/differ",
        "//packages/database",
        "@npm//@nestjs/common",
        "@npm//@types/node",
    ],
)
