load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

ts_project(
    name = "asset",
    package_name = "@spica-server/asset",
    srcs = glob([
        "schema/*.json",
        "**/*.ts",
        "index.ts",
    ]),
    deps = [
        "//packages/core",
        "//packages/core/differ",
        "//packages/core/schema",
        "//packages/database",
        "//packages/interface/asset",
        "//packages/representative",
        "//stacks/api/passport/guard",
        "@npm//@nestjs/common",
        "@npm//@types/archiver",
        "@npm//@types/node",
        "@npm//archiver",
    ],
)
