package(default_visibility = ["//visibility:public"])

load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("//tools/dgeni:index.bzl", "docs")

ts_library(
    name = "bucket",
    srcs = glob([
        "src/**/*.ts",
        "index.ts",
    ]),
    data = glob(["src/schemas/*.json"]),
    module_name = "@spica-server/bucket",
    deps = [
        "//packages/core",
        "//packages/core/differ",
        "//packages/core/schema",
        "//packages/database",
        "//stacks/api/activity/services",
        "//stacks/api/bucket/cache",
        "//stacks/api/bucket/common",
        "//stacks/api/bucket/expression",
        "//stacks/api/bucket/graphql",
        "//stacks/api/bucket/history",
        "//stacks/api/bucket/hooks",
        "//stacks/api/bucket/hooks/proto",
        "//stacks/api/bucket/realtime",
        "//stacks/api/bucket/services",
        "//stacks/api/machinery",
        "//stacks/api/passport",
        "//stacks/api/passport/guard",
        "//stacks/api/preference",
        "//stacks/api/preference/services",
        "//stacks/api/status",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@types/json-schema",
        "@npm//@types/mongodb",
        "@npm//@types/node",
        "@npm//cron",
        "@npm//rxjs",
    ],
)

docs(
    name = "docs",
    srcs = glob(["**/*.ts"]),
    doc_name = "bucket",
    tags = ["bucket-docs"],
    exports = [
        "bucket",
        "data",
    ],
    deps = [
        "//packages/database",
        "//stacks/api/passport",
    ],
)
