load("//tools/ts_project:index.bzl", "ts_project")

package(default_visibility = ["//visibility:public"])

load("//tools/dgeni:index.bzl", "docs")

ts_project(
    name = "bucket",
    package_name = "@spica-server/bucket",
    srcs = glob([
        "src/**/*.ts",
        "src/schemas/*.json",
        "index.ts",
    ]),
    deps = [
        "//packages/core",
        "//packages/core/differ",
        "//packages/core/patch",
        "//packages/core/schema",
        "//packages/database",
        "//packages/interface/representative",
        "//stacks/api/activity/services",
        "//stacks/api/asset",
        "//stacks/api/bucket/cache",
        "//stacks/api/bucket/common",
        "//stacks/api/bucket/expression",
        "//stacks/api/bucket/graphql",
        "//stacks/api/bucket/history",
        "//stacks/api/bucket/hooks",
        "//stacks/api/bucket/hooks/proto",
        "//stacks/api/bucket/realtime",
        "//stacks/api/bucket/services",
        "//stacks/api/passport",
        "//stacks/api/passport/guard",
        "//stacks/api/preference",
        "//stacks/api/preference/services",
        "//stacks/api/status",
        "//stacks/api/versioncontrol",
        "@npm//@nestjs/common",
        "@npm//@nestjs/core",
        "@npm//@types/json-schema",
        "@npm//@types/mongodb",
        "@npm//@types/node",
        "@npm//cron",
        "@npm//rxjs",
    ],
)

docs(
    name = "docs",
    srcs = glob(["**/*.ts"]),
    doc_name = "bucket",
    tags = ["bucket-docs"],
    exports = [
        "bucket",
        "data",
    ],
    deps = [
        "//packages/database",
        "//stacks/api/passport",
    ],
)
